command line commit

--- a/_posts/0000-01-01-intro.md
+++ b/_posts/0000-01-01-intro.md
@@ -3,4 +3,4 @@ layout: slide
 title: "Titelseite"
 ---
 
-Welcome to the front page of this slide show!
+Welcome to the front page of this slde show!
